--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 }
 
 .ftco-section{overflow: hidden;}
+.memuIcon{color: #fff;}
 </style>
 
 
@@ -121,7 +122,7 @@
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html">Muhammad Aslam </a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
+	        <span class="oi oi-menu memuIcon"></span> Menu
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
